package utp;

message HeadEdge
{
    required bytes fstag = 1;			// FileSystem tag (digest of fsid)
    required bytes rootref = 2;			// Encrypted Root Block Reference
    required bytes prevref = 3;			// Encrypted Prev Root Block Reference
    required uint64 tstamp = 4;			// uSec Since Epoch
}

message SignedHeadEdge
{
    required bytes headedge = 1;		// Marshaled HeadEdge
    required bytes keyid = 2;			// Key Identifier
    required bytes signature = 3;		// Digital Signature
}

message SignedHeadEdgeVector
{
    repeated SignedHeadEdge she = 1;
}
